# Desafio_ITAU

./: .env.example  .gitignore  CONTRIBUTING.md  DESCRICAO.md  README.md  pyproject.toml  requirements.txt  teste_lexico.py
.github/: pull_request_template.md
docs/: IDENTIDADE_CopomLens.md  Realinhamento_Equipe.md  SPRINT_ate_02-07.md  bloqueio_DI_1Y.md
docs/features/: extract_tone.md
docs/src/copom/: ingest.md
docs/src/copom/ingest/: ingest.md  parser.md
docs/src/models/: __main__.py.md  index.md  llm_client.md  promptExec.md
learn/: collector-explained.md
notebooks/: eda_lexico_vs_llm.ipynb
prompts/: copom_v1.md
scripts/: check_olinda.py  validar_lexico_historico.py
src/copom/features/: __init__.py  extract_tone.py  lexico.py
src/copom/ingest/: __init__.py  __main__.py  atas_pdf.py  collect.py  marketdata.py  parser.py
src/copom/models/: __init__.py  __main__.py  llm_client.py  promptExec.py
src/copom/surprise/: __init__.py  __main__.py  decision.py  surpresa.py
tests/: test_atas_pdf.py  test_collect.py  test_extract_tone.py  test_integration_marketdata.py  test_lexico.py  test_marketdata.py  test_marketdata_extra.py  test_painel_di1y.py  test_sgs_chunking.py  test_surpresa.py  test_surprise.py  test_surprise_extra.py
