[project]
name = "copom-quant-ai"
version = "0.1.0"
description = "Estratégia quantitativa baseada no tom da comunicação do Copom (DI 1Y)."
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
    "httpx>=0.27",
    # Extração de texto das atas publicadas só em PDF (bônus, ingest.atas_pdf):
    # pdfminer.six como extrator principal e pypdf como fallback para PDFs com
    # xref quebrado que o BCB publicou (ex.: ata 217).
    "pdfminer.six>=20240706",
    "pypdf>=4.0",
    "python-dotenv>=1.0",
    "jupyter>=1.0",
    # Extração LLM local: cliente Ollama. Alternativa: transformers + torch.
    "ollama>=0.3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
